--- a/index.html
+++ b/index.html
@@ -353,9 +353,41 @@ background-size: cover
 
 &lt;img style="border-radius: 50%;" src="images/life-after-phd.png" width="450px" height="280"/&gt;
 
-&lt;img src="images/life-after-phd.png" width="222" /&gt;
+---
+
+## Development of Methods in Biogeography 
+
+.pull-left[
+&lt;img src="images/Phy_endemism.png" width="100%" /&gt;
+&lt;img src="images/Jetz_age_arrival.png" width="100%" /&gt;
+]
+
+--
+
+.center2[
+- Development of .green[Model-based] Phylogenetic metrics
+
+- Unification Macroecology, Macroevolution and Community Ecology
+]
+
+
+.footnote[GitHub repo [here](https://github.com/GabrielNakamura/DivB_metrics)]
 
 ---
+
+## Development of Methods in Biogeography
+
+.upperleft[
+&lt;img src="images/Logo_FishPhyloMaker.png" width="23%" /&gt;
+]
+
+--
+
+.bottomleft[
+&lt;img src="images/world_map_DarwinianShort.png" width="50%" /&gt;
+]
+
+
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
