updating figures and biogeography methods

--- a/index.html
+++ b/index.html
@@ -362,6 +362,8 @@ background-size: cover
 &lt;img src="images/Jetz_age_arrival.png" width="100%" /&gt;
 ]
 
+.footnote[GitHub repo [here](https://github.com/GabrielNakamura/DivB_metrics)]
+
 --
 
 .center2[
@@ -371,22 +373,39 @@ background-size: cover
 ]
 
 
-.footnote[GitHub repo [here](https://github.com/GabrielNakamura/DivB_metrics)]
 
 ---
 
 ## Development of Methods in Biogeography
 
-.upperleft[
-&lt;img src="images/Logo_FishPhyloMaker.png" width="23%" /&gt;
+.pull-left[
+&lt;img src="images/Logo_FishPhyloMaker.png" width="50%" /&gt;
+]
+
+---
+
+## Development of Methods in Biogeography
+
+.pull-left[
+.center[
+&lt;img src="images/Logo_FishPhyloMaker.png" width="30%" /&gt;
+]
+
+&lt;img src="images/world_map_DarwinianShort.png" width="100%" /&gt;
+
+]
+
+.footnote[
+Ecological informatics [paper here](https://www.sciencedirect.com/science/article/abs/pii/S1574954121002727)
 ]
 
 --
 
-.bottomleft[
-&lt;img src="images/world_map_DarwinianShort.png" width="50%" /&gt;
-]
+.center2[
+- Fast and reliable way to produce phylogenies
 
+- Computation of .green[Darwinian Shortfalls]
+]
 
 
     </textarea>
