adjusting background image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello World</title>
     <meta charset="utf-8" />
     <meta name="author" content="Gabriel Nakamura" />
-    <meta name="date" content="2021-12-20" />
+    <meta name="date" content="2021-12-21" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <meta name="description" content="How to Get Your Teaching Materials Online with R Markdown"/>
@@ -86,7 +86,7 @@ She was released and goes well, I hope
 ---
 template: clouds
 
-# Who I am?
+# Who am I?
 
 ???
 
@@ -250,7 +250,7 @@ class: center, middle
 background-image: url(images/Clouds.jpg)
 background-size: cover
 
-# Why am I here?
+# Before TAMUCC...
 
 ---
 class: middle, center
@@ -336,18 +336,12 @@ Functional dimensions]
 Proposition of new beta diversity metrics
 
 ---
-template: clouds
+template: clouds2
 class: middle, center
 background-image: url(images/Clouds.jpg)
 background-size: cover
 
----
-template: clouds
-class: middle, center
-background-image: url(images/Clouds.jpg)
-background-size: cover
-
-## Why am I here?
+# After PhD
 
 &lt;img style="border-radius: 50%;" src="images/life-after-phd.png" width="450px" height="280"/&gt;
 
@@ -358,9 +352,9 @@ background-size: cover
 .pull-left[
 &lt;img src="images/Phy_endemism.png" width="90%" /&gt;
 &lt;img src="images/Jetz_age_arrival.png" width="90%" /&gt;
-]
-
 .footnote[GitHub repo [here](https://github.com/GabrielNakamura/DivB_metrics)]
+
+]
 
 --
 
@@ -403,6 +397,13 @@ Ecological informatics [paper here](https://www.sciencedirect.com/science/articl
 - Computation of .green[Darwinian Shortfalls]
 ]
 
+---
+template: clouds2
+class: middle, center
+background-image: url(images/Clouds.jpg)
+background-size: cover
+
+# Now in TAMUCC
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
