adding comments to slides

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ background-size: cover
 
 
 
+???
+Thank you everyone for the presence, today is my official presentation for you all,
+I'm excited to know you all, even from the screem computer, but that is the safest way that we 
+can do this at this moment.
+
 ---
 template: clouds
 class: top, left
@@ -62,6 +67,11 @@ class: top, left
 # .big-text[Olá!]
 # .big-text[Hello!]
 ]
+
+???
+
+Hello and Ola, thats the way that we say hello in my birth contry that is Brazil
+
 
 --
 
@@ -76,11 +86,12 @@ class: top, left
 
 ???
 
-Hello everyone, I prepared this little presentation to present myself, who I am 
-and what brought me to here, in Corpus.
+So, I prepared this presentation to you. Hope that with this you can know a litle bit about me, 
+who I am, both as a person and a researcher, and what brought me to here, in Corpus.
 
-This is me with a butterfly in my hand
-She was released and goes well, I hope
+Despite to use this photo on my presentations you will realize that I'm not much into the field work 
+to answer the questions that I try to answer in my research projects, but doesn't mean that I don't like to
+be in contact with nature.
 
 
 ---
@@ -90,7 +101,7 @@ template: clouds
 
 ???
 
-Who am I?
+First, a more personal perspective of Who I am when I'm outside the walls of university...
 
 ---
 template: clouds
@@ -102,10 +113,9 @@ background-size: cover
 
 
 ???
-In a nutshell...
-Despite looks like a biologist in a field work 
-I am not much into the organisms, and my taxonomic 
-knowledge is better represented by this Tweet
+
+I'm a biologist, but as a Biologist this tweet defines much of who I am.
+I really love nature and be in close contact, but I'm really dreadful at identifications
 
 ---
 class: middle, center
@@ -118,7 +128,7 @@ class: middle, center
   
 ???
 
-Just a regular person 
+I consider myself just a regular person 
   
 --
 
@@ -130,7 +140,7 @@ Just a regular person
 
 ???
 
-That more recently moved all the way from BR to US
+In my free time I like to have physical exercices. I had a scholarship to play volleyball in Brazil during my high school years, and this is the sport that I love to pratice untill now when I have the opportunity
 
 ---
 class: middle, center
@@ -154,12 +164,23 @@ class: middle, center
     &lt;img src="images/bike.png" style=""&gt;
   &lt;/div&gt;
   
+???
+
+I also love to ride by bike, it's help me to moving arround the city and at the same time have some
+exercise, bicycle used to be for me my preferred main of transportation in all places that I lived. 
+Hope that I can find one here in Corpus soon
+  
 --
 
 &lt;div class="column"style="margin: 0 1em;"&gt;
     &lt;h3&gt; Music &lt;/h3&gt;
     &lt;img src="images/guitar.jpg" style=""&gt;
   &lt;/div&gt;
+
+???
+
+I also like music, specially guitar. I just play for fun, it helps me to clean my mind, unfortunatelly 
+I think that is not the same for my neibours.
 
 --
 
@@ -171,7 +192,9 @@ class: middle, center
 
 ???
 
-But they're stuck on your computer, and you need to share them easily others with out filling up their inboxes.
+I'm also a enthusiast of photograph, whenever I can I grab my camera and go outside to take some photos. I
+used to maintain I page with my photos on Flickr. My camera and my guitar were two of the few things that
+I brought with me from Brazil
   
 --
   &lt;div class="column" style="margin: 0 1em;"&gt;
@@ -182,7 +205,8 @@ But they're stuck on your computer, and you need to share them easily others wit
 
 ???
 
-And--- you probably have a new classroom space that looks like this-- so sharing needs to be done 100% online
+At least, I love cooking. Love to prepare and share food with other people, but this not means that I'm 
+a chef. Hope that we could share some foods in the near future. 
 
 ---
 class: center
@@ -191,11 +215,7 @@ background-size: contain
 
 ???
 
-Right now I´m felling exactly like this, 
-
-Everything seems to need my attention,
-
-but I cannot do everything.
+As I said, I'm from Brazil, the biggest country in South America.
 
 ---
 class: center
@@ -205,17 +225,27 @@ background-size: cover
 
 ???
 
-Specifically from this State, called Mato Grosso do Sul
+If I can list things for which Brazil is known abroad, maybe the first thing is the footbal.
+Most of brazilians love this game and our national squad won five times the World Cup.
 
 ---
 class: center
 background-image: url("images/nordeste.jpg")
 background-size: cover
 
+???
+
+Brazil is also very known for its nature. Here is one of the beatifull isolated beaches in the northeast 
+of Brazil that I had the luck to be a few years ago.
+
 ---
 class: center
 background-image: url("images/canyons.jpg")
 background-size: cover
+
+???
+
+Here just one more landscape that we can find in Brazil, this is in the South part of the country.
 
 ---
 class: center
@@ -224,7 +254,8 @@ background-size: contain
 
 ???
 
-Specifically from this State, called Mato Grosso do Sul
+Specifically from this State, called Mato Grosso do Sul. A very tropical state located at the center of
+Brazil.
 
 ---
 class: center
@@ -233,7 +264,8 @@ background-size: contain
 
 ???
 
-Specifically from this State, called Mato Grosso do Sul
+That is also known by its exhuberant nature, particularly its rivers with crystaline waters. This is one 
+of them that I had the luck to known.
 
 ---
 class: center
@@ -242,15 +274,31 @@ background-size: cover
 
 ???
 
-Specifically from this State, called Mato Grosso do Sul
+And more specifically, this is a sunset view of my hometown, Tres Lagoas, something like Three Lake City.
 
 ---
+
+name: clouds2
+class: center, middle
+background-image: url(images/Clouds.jpg)
+background-size: cover
+
+???
+
+So, here I fineshed the nostalgic part of this presentation, and
+now a little bit of my academic background
+
+---
+
 name: clouds
 class: center, middle
 background-image: url(images/Clouds.jpg)
 background-size: cover
 
 # Before TAMUCC...
+
+???
+What do I did before land here in TAMUCC
 
 ---
 class: middle, center
@@ -260,7 +308,11 @@ class: middle, center
     &lt;h3&gt; Graduation in Biology &lt;/h3&gt;
     &lt;img src="images/graduation.png" style="width: 100%;"&gt;
   &lt;/div&gt;
-  
+
+???
+
+I have a degree in Biological Sciences in the Federal University of Mato Grosso do Sul in Brazil
+
 --
   
   &lt;div class="column"style="margin: 0 1em;"&gt;
@@ -268,6 +320,13 @@ class: middle, center
     &lt;img src="images/fish.png" style=""&gt;
   &lt;/div&gt;
   
+???
+
+After that I earned my master degree at the same institution in Brazil, in which I investigated the factors
+influencing the assembly of freshwater fish communities. During my master's thesis I started to use be familiar with numerical tools to detect patterns and processess acting in ecological communities, like
+different diversity metrics, mathematical models and programming in R. 
+I defended my master's thesis by presenting a new method to quantify the dimensionality of diversity in
+freshwater fish communities.
 
 --
 
@@ -275,6 +334,15 @@ class: middle, center
     &lt;h3&gt; PhD. Ecology &lt;/h3&gt;
     &lt;img src="images/phd.png" style=""&gt;
   &lt;/div&gt;
+  
+???
+
+Then, in 2015 I started my Phd in Ecology at Federal University of Rio Grande do Sul in the south region
+of Brazil. Through 2015 to 2019 my research was guided by trying to answer which do we mean by biological 
+diversity? In the community level of biological organization, which dimension of diversity best describe what we call biodiversity?
+So, after four years I developed some numerical tools to quantify dimensionality of diversity, extending
+the concept that was used and also developed new metrics to quantify beta diversity to consider different
+components of diversity in a single numerical framework.
   
 --
 
@@ -286,7 +354,8 @@ class: middle, center
 
 ???
 
-And--- you probably have a new classroom space that looks like this-- so sharing needs to be done 100% online
+After that I stayed in Federal University of Rio Grande do Sul for a postdoc with professor Leandro Duarte
+
 
 ---
 
